<resources>
    <string name="app_name">parking</string>
    <string name="common_text_hint">提示</string>
    <string name="common_text_sure">確定</string>
    <string name="common_text_cancel">取消</string>
    <string name="common_text_next">下一步</string>
    <string name="common_text_i_know_it">我知道了</string>
    <string name="common_text_success">更新完成</string>
    <string name="common_text_fail">失敗</string>
    <string name="common_text_error_msg">錯誤訊息</string>
    <string name="common_text_error_content">目前網路連線不穩</string>
    <string name="common_text_error_content2">網路連線品質不佳</string>
    <string name="common_text_unknown_fail">發生未預期的錯誤</string>
    <string name="common_login_failure">登入失敗</string>
    <string name="common_edittext_must_not_empty_error">此為必填資料</string>
    <string name="common_input_format_error">格式輸入錯誤</string>

    <string name="user_input_hint">使用者名稱</string>
    <string name="user_input_title">使用者名稱</string>
    <string name="pwd_input_hint">密碼</string>
    <string name="pwd_input_title">密碼</string>
    <string name="item_phone_number">電話</string>
    <string name="item_address">地址</string>
    <string name="login_title">登入</string>
</resources>