<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingHorizontal="20dp">

        <com.example.parking.widget.TextInputLayout
            android:id="@+id/til_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:hint="@string/user_input_hint"
            android:inputType="textEmailAddress"
            app:floatingTitle="@string/user_input_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.parking.widget.TextInputLayout
            android:id="@+id/til_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/pwd_input_hint"
            android:inputType="textPassword"
            app:endIconDrawable="@drawable/ic_eye_close_apple"
            app:floatingTitle="@string/pwd_input_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_user" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbtn_login"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_gradient_green"
            android:stateListAnimator="@null"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_pwd" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
